# gemma4-hackathon

./: .env.example  .gitignore  README.md  package.json
apps/streamlit/: app.py  requirements.txt  session_memory.py  ui_config.py
apps/web/: next-env.d.ts  package.json
docs/: architecture.md  demo-script.md  safety.md
finetuning/: gemma4_e4b_codemixing_finetune.ipynb
samples/demo/: electricity-bill-wb-en.txt  (+16 more)
scripts/: start-dev.ps1
services/api/: pyproject.toml
services/api/scripts/: run_demo_flow.py  run_tts_smoke.py
services/api/src/app/: __init__.py  main.py
services/api/src/app/agent/: __init__.py  orchestrator.py
services/api/src/app/api/: router.py
services/api/src/app/api/routes/: chat.py  documents.py  health.py  stt.py  tts.py
services/api/src/app/chat/: __init__.py  pipeline.py
services/api/src/app/core/: __init__.py  config.py
services/api/src/app/demo/: __init__.py  flow.py
services/api/src/app/documents/: __init__.py  analysis.py
services/api/src/app/explanation/: __init__.py  evidence.py  pipeline.py
services/api/src/app/inference/: __init__.py  gemma.py
services/api/src/app/ocr/: __init__.py  pipeline.py
services/api/src/app/schemas/: __init__.py  chat.py  document.py  explanation.py  ocr.py
services/api/src/app/stt/: __init__.py  sarvam.py
services/api/src/app/tools/: __init__.py  base.py  calculator.py  executor.py  official_search.py  planner.py  registry.py
services/api/src/app/tts/: __init__.py  sarvam.py
services/api/tests/: test_chat_api.py  test_chat_grounding.py  test_demo_flow.py  test_document_analysis_api.py  test_explanation_evidence.py  test_explanation_pipeline.py  test_gemma_adapter.py  test_health.py  test_multilingual_integration.py  test_ocr_pipeline.py  test_official_search_tool.py  test_orchestrator.py  test_sarvam_stt.py  test_sarvam_tts.py  test_tool_executor.py  test_tool_planner.py  test_tool_registry.py
(+25 files in other folders)
