[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "project-api"
version = "0.1.0"
description = "Multilingual document-understanding and assistance API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "jsonschema>=4.23,<5",
    "pillow>=12,<13",
    "pydantic-settings>=2.7,<3",
    "pymupdf>=1.26,<2",
    "python-multipart>=0.0.20,<1",
    "sarvamai>=0.1.28,<0.2",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
gemma = [
    "accelerate>=1.9,<2",
    "librosa>=0.11,<1",
    "sentencepiece>=0.2,<1",
    "soundfile>=0.13,<1",
    "torch>=2.7,<3",
    "torchaudio>=2.7,<3",
    "torchvision>=0.22,<1",
    "transformers>=5.10.1,<6",
]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
